[tool.poetry]
name = "liquid-gitd"
version = "0.1.0"
description = ""
authors = ["hezean <realhezean@gmail.com>"]
readme = "README.md"
packages = [{include = "liquid_gitd"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-httpauth = "^4.7.0"
toml = "^0.10.2"
requests = "^2.28.1"
apscheduler = "^3.9.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
